classDiagram
  direction LR
  class Point {
    +x : number
    +y : number
  }
  class Direction {
    <<enumeration>>
    up
    down
    left
    right
  }
  class TileType {
    <<enumeration>>
    wall
    floor
    corridor
    door
    chest
    stairs
    rubble
    merchant
    trap
  }
  class Room {
    +id : number
    +name : string
    +x0 : number
    +y0 : number
    +x1 : number
    +y1 : number
  }
  class LogEntry {
    +id : number
    +text : string
  }
  class CombatFloat {
    +id : number
    +x : number
    +y : number
    +amount : number
    +tone : damage / heal / miss / level
  }
  class Projectile {
    +id : number
    +fromX : number
    +fromY : number
    +toX : number
    +toY : number
    +kind : arrow
  }
  class InventoryItem {
    +id : number
    +kind : ItemKind
  }
  class FloorItem {
    +id : number
    +x : number
    +y : number
    +kind : ItemKind / gold
    +amount : number
  }
  class Equipment {
    +weapon : number / null
    +armor : number / null
    +rings : number[]
    +amulet : number / null
  }
  class AttackKind {
    <<enumeration>>
    melee
    ranged
    spell
  }
  class AttackProfile {
    +accuracy : number
    +minDamage : number
    +maxDamage : number
  }
  class AttackProfiles {
    <<type>>
    Record«AttackKind, AttackProfile»
  }
  class Enemy {
    +id : number
    +kind : EnemyKind
    +x : number
    +y : number
    +hp : number
    +maxHp : number
    +accuracy : number
    +damage : number
    +xp : number
    +room : number
  }
  class GameStatus {
    <<enumeration>>
    idle
    playing
    dead
  }
  class HeroStats {
    +maxHp : number
    +attacks : AttackProfiles
  }
  class CombatStats {
    +defense : number
  }
  class LeveledStats {
    +level : number
    +xp : number
    +hp : number
  }
  class Dungeon {
    +cols : number
    +rows : number
    +tiles : TileType[][]
    +rooms : Room[]
    +playerStart : Point
    +enemies : Enemy[]
    +items : FloorItem[]
    +shop : DungeonShop / null
  }
  class ShopItem {
    +id : number
    +kind : ItemKind
  }
  class DungeonShop {
    +room : number
    +merchant : Point
    +stock : ShopItem[]
  }
  class UseNoragonOptions {
    +maxHp? : number
    +attacks? : Partial«AttackProfiles»
    +seed? : number
  }
  class BoardView {
    +cols : number
    +rows : number
    +tiles : TileType[][]
    +visible : boolean[][]
    +floorItems : FloorItem[]
  }
  class HeroView {
    +position : Point
    +hp : number
    +maxHp : number
    +level : number
    +xp : number
    +xpToNext : number
    +attacks : AttackProfiles
    +defense : number
    +gold : number
    +inventory : InventoryItem[]
    +equipment : Equipment
    +onStairs : boolean
  }
  class RunView {
    +status : GameStatus
    +depth : number
    +kills : number
    +turns : number
  }
  class NoragonApi {
    +board : BoardView
    +hero : HeroView
    +run : RunView
    +enemies : Enemy[]
    +activeEnemies : Enemy[]
    +currentRoom : number / null
    +revealedRooms : number[]
    +aiming : boolean
    +targetId : number / null
    +adjacentTrap : Direction / null
    +log : LogEntry[]
    +effects : CombatFloat[]
    +projectiles : Projectile[]
    +fadingEnemies : Enemy[]
    +shopping : boolean
    +shopStock : ShopItem[]
    +start : () ↦ void
    +reset : () ↦ void
    +move : () ↦ void
    +disarm : () ↦ void
    +descend : () ↦ void
    +equip : () ↦ void
    +drink : () ↦ void
    +drop : () ↦ void
    +aimStart : () ↦ void
    +aimCycle : () ↦ void
    +aimCancel : () ↦ void
    +fire : () ↦ void
    +buy : () ↦ void
    +sell : () ↦ void
    +closeShop : () ↦ void
  }
  class GameState {
    +seed : number
    +depth : number
    +dungeon : Dungeon
    +base : HeroStats
    +level : number
    +xp : number
    +player : Point
    +hp : number
    +defense : number
    +gold : number
    +inventory : InventoryItem[]
    +equipment : Equipment
    +nextItemId : number
    +floorItems : FloorItem[]
    +enemies : Enemy[]
    +status : GameStatus
    +kills : number
    +turns : number
    +revealedRooms : number[]
    +log : LogEntry[]
    +nextLogId : number
    +effects : CombatFloat[]
    +projectiles : Projectile[]
    +fadingEnemies : Enemy[]
    +shopping : boolean
    +shopStock : ShopItem[]
    +nextEffectId : number
    +rngState : number
    +aiming : boolean
    +targetId : number / null
    +seen : boolean[][]
  }
  class GameAction {
    <<union>>
    configure
    reset
    start
    move
    disarm
    descend
    equip
    drink
    drop
    aimStart
    aimCycle
    aimCancel
    fire
    buy
    sell
    closeShop
  }
  class EnemyKind {
    <<enumeration>>
    bat
    kobold
    spider
    direWolf
    skeleton
    goblin
    orc
    ogre
    troll
    wraith
  }
  class EnemyInfo {
    +name : string
    +description : string
    +maxHp : number
    +accuracy : number
    +damage : number
    +verb : string
    +xp : number
    +minDepth : number
  }
  class ItemCategory {
    <<enumeration>>
    weapon
    armor
    ring
    amulet
    potion
  }
  class ItemKind {
    <<enumeration>>
    dagger
    shortSword
    longSword
    battleAxe
    clothes
    leather
    chainmail
    plate
    ringOfProtection
    ringOfPower
    ringOfPrecision
    amuletOfHealth
    amuletOfValor
    healthPotion
  }
  class ItemDef {
    +name : string
    +category : ItemCategory
    +meleeDamage : number
    +meleeAccuracy : number
    +defense : number
    +maxHp : number
    +heal : number
    +value : number
    +stackable : boolean
  }
  InventoryItem --> ItemKind : kind
  FloorItem --> ItemKind : kind
  AttackProfiles --> AttackKind
  AttackProfiles --> AttackProfile
  Enemy --> EnemyKind : kind
  HeroStats --> AttackProfiles : attacks
  HeroStats <|-- CombatStats
  CombatStats <|-- LeveledStats
  Dungeon --> TileType : tiles
  Dungeon --> Room : rooms
  Dungeon --> Point : playerStart
  Dungeon --> Enemy : enemies
  Dungeon --> FloorItem : items
  Dungeon --> DungeonShop : shop
  ShopItem --> ItemKind : kind
  DungeonShop --> Point : merchant
  DungeonShop --> ShopItem : stock
  UseNoragonOptions --> AttackProfiles : attacks
  BoardView --> TileType : tiles
  BoardView --> FloorItem : floorItems
  HeroView --> Point : position
  HeroView --> AttackProfiles : attacks
  HeroView --> InventoryItem : inventory
  HeroView --> Equipment : equipment
  RunView --> GameStatus : status
  NoragonApi --> BoardView : board
  NoragonApi --> HeroView : hero
  NoragonApi --> RunView : run
  NoragonApi --> Enemy : enemies, activeEnemies, fadingEnemies
  NoragonApi --> Direction : adjacentTrap, move, disarm
  NoragonApi --> LogEntry : log
  NoragonApi --> CombatFloat : effects
  NoragonApi --> Projectile : projectiles
  NoragonApi --> ShopItem : shopStock
  HeroStats <|-- GameState
  GameState --> Dungeon : dungeon
  GameState --> HeroStats : base
  GameState --> Point : player
  GameState --> InventoryItem : inventory
  GameState --> Equipment : equipment
  GameState --> FloorItem : floorItems
  GameState --> Enemy : enemies, fadingEnemies
  GameState --> GameStatus : status
  GameState --> LogEntry : log
  GameState --> CombatFloat : effects
  GameState --> Projectile : projectiles
  GameState --> ShopItem : shopStock
  GameAction --> HeroStats
  GameAction --> Direction
  ItemDef --> ItemCategory : category
